--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "type": "module",
   "scripts": {
-    "start:dev": "node --experimental-specifier-resolution=node --loader ts-node/esm src/IndexedHashMap.ts",
+    "start:dev": "node --experimental-specifier-resolution=node --loader ts-node/esm src/OrderedHashMap.ts",
     "compile": "tsc --listFiles",
     "start:prod": "node --experimental-specifier-resolution=node dist/index.js",
     "test": "jest",
